--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ body {
 
 <img src="Images\listen.jpg" style="width:40%">
 
-<p style="font-size: 100%"><a href="MyPLaylist/index.html" target="_blank">Play</a></p>
+<p style="font-size: 100%"><a href="MyPLaylist/index.html" >Play</a></p>
 
 
 </body>
