--- a/MyPLaylist/index.html
+++ b/MyPLaylist/index.html
@@ -25,9 +25,9 @@ a[target] {
 
 <p style="font-size: 140%"><a href="../Dollhouse/index.html" target= "_blank">Dollhouse</a></p>
 
-<p style="font-size: 140%"><a href="../Driver's License/index.html" target="_top">Driver's License</a></p>
+<p style="font-size: 140%"><a href="../Driver's License/index.html" target="_blank">Driver's License</a></p>
 
-<p style="font-size: 140%"><a href="../Crybaby/index.html" target="_top">Crybaby</a></p>
+<p style="font-size: 140%"><a href="../Crybaby/index.html" target="_blank">Crybaby</a></p>
 
 <p style="font-size: 140%"><a href="../Fuyu no Hanashi/index.html" target="_blank">Fuyu no Hanashi</a></p>
 
